# MOD_Planet_mapper

./: .gitignore  build.gradle  error.txt  gradle.properties  settings.gradle
.github/workflows/: build-physics.yml
src/main/cpp/: CMakeLists.txt  physics_bridge.cpp  physics_bridge.h
src/main/java/com/example/planetmapper/: Config.java  PlanetMapper.java
src/main/java/com/example/planetmapper/client/: ClientInputHandler.java  ClientModEvents.java  SpaceDimensionEffects.java  WorldSettingsButtonHandler.java
src/main/java/com/example/planetmapper/client/gui/: AdvancedCelestialBodyCreatorScreen.java  CelestialBodyCreatorScreen.java  CelestialBodyEditorScreen.java  PlanetMapperWorldSettingsScreen.java
src/main/java/com/example/planetmapper/client/renderer/: PhysicsBlockRenderer.java  PhysicsStructureRenderer.java  PlanetTextureGenerator.java  SpaceSkyRenderer.java
src/main/java/com/example/planetmapper/command/: LandingCommand.java  PhysicsTestCommand.java  ShipBuilderCommand.java  SpawnCubeCommand.java  SpawnPlatformCommand.java  StructureCommand.java
src/main/java/com/example/planetmapper/entity/: ModEntities.java  PhysicsBlockEntity.java  PhysicsStructureEntity.java
src/main/java/com/example/planetmapper/handler/: ClientCleanupHandler.java  ImmersivePortalsHandler.java  PersistenceHandler.java  PhysicsEntityHandler.java  PhysicsPlatformClientHandler.java  PhysicsPlatformHandler.java  PhysicsSyncHandler.java  ShipyardEntityHandler.java  ShipyardHandler.java  SpacePhysicsHandler.java  StructureBuildHandler.java  StructurePhysicsHandler.java  WorldBoundaryHandler.java  WorldCollisionHandler.java  WorldPhysicsHandler.java
src/main/java/com/example/planetmapper/item/: AdvancedCelestialBodyCreatorItem.java  CelestialBodyCreatorItem.java  CelestialBodyEditorItem.java  ModItems.java  StructureSelectorWandItem.java
src/main/java/com/example/planetmapper/mixin/: EntityMixin.java  LevelMixin.java
src/main/java/com/example/planetmapper/network/: CelestialBodyCreationPacket.java  CelestialBodySyncPacket.java  CelestialBodyUpdatePacket.java  DynamicColliderRemovePacket.java  DynamicColliderSyncPacket.java  DynamicColliderUpdatePacket.java  PacketHandler.java  PhysicsEntitySyncPacket.java  ShipControlPacket.java  StructureBlockUpdatePacket.java  StructureSyncChunkPacket.java  StructureSyncCodec.java  StructureSyncPacket.java
src/main/java/com/example/planetmapper/physics/: BlockPhysicsProfile.java  BlockPhysicsProfiles.java  BlockPhysicsTags.java  NativePhysicsEngine.java  PhysicsBodyEntity.java  PhysicsBodyEntityAdapter.java  PhysicsColliderManager.java  PhysicsMathUtils.java  PhysicsWorldManager.java  VoxelShapeOptimizer.java  WorldCollisionManager.java
src/main/java/com/example/planetmapper/physics/structure/: PhysicsStructure.java  StructureBlockData.java  StructureBuildManager.java  StructurePhysicsManager.java  StructurePhysicsProperties.java  StructureSelection.java  StructureSelectionManager.java  WorldStructureSpawner.java
src/main/java/com/example/planetmapper/shipyard/: ShipyardManager.java  ShipyardSavedData.java
src/main/java/com/example/planetmapper/space/: CelestialBody.java  CelestialBodyRegistry.java  SpaceSystemData.java
src/main/java/com/example/planetmapper/util/: StructureScanner.java
src/main/resources/: pack.mcmeta  planetmapper.mixins.json
src/main/resources/assets/planetmapper/lang/: en_us.json
src/main/resources/data/planetmapper/dimension/: shipyard.json  space.json
src/main/resources/data/planetmapper/dimension_type/: shipyard.json  space.json
src/main/resources/data/planetmapper/tags/blocks/physics/: glass.json  ice.json  levitating.json  light.json  metal.json  sand.json  soft.json  stone.json  wood.json
